# cassandra-cql

./: .gitignore  .travis.yml  README.md  cassandra-cql.cabal  changelog.md  test.hs
Database/Cassandra/: CQL.hs
tests/: .gitignore  Main.hs  create_keyspace.cql  example-autocreate-keyspace.hs  example-trans.hs  example.hs  test-decimal.hs  test-double.hs  test-float.hs  test-inet.hs  test-list.hs  test-map.hs  test-pool.hs  test-set.hs  test-timestamp.hs  test-timeuuid.hs  test-tuple.hs  test-varint.hs
