name:                cassandra-cql
version:             0.5.0.1
synopsis:            Haskell client for Cassandra's CQL protocol
description:         Haskell client for Cassandra's CQL protocol.
license:             BSD3
license-file:        LICENSE
author:              Stephen Blackheath
maintainer:          http://blacksapphire.com/antispam/
copyright:           (c) Stephen Blackheath 2013-2015
category:            Database
build-type:          Simple
stability:           alpha
cabal-version:       >=1.8
extra-source-files:  tests/example.hs
                     tests/test-map.hs
                     tests/test-set.hs
                     tests/test-list.hs
                     tests/test-double.hs
                     tests/test-float.hs
                     tests/test-timestamp.hs
                     tests/test-decimal.hs
                     tests/test-timeuuid.hs
                     tests/test-inet.hs
                     tests/test-varint.hs
                     changelog.md

source-repository head
  type:     git
  location: https://github.com/the-real-blackh/cassandra-cql

library
  exposed-modules:     Database.Cassandra.CQL
  build-depends:       base             >= 4.5.0.0 && <= 4.8.0.0,
                       containers       >= 0.4.0.0,
                       mtl              >= 2.1.0,
                       MonadCatchIO-transformers >= 0.3.0.0,
                       network          >= 2.4.0.0,
                       text             >= 0.11.0.0,
                       cereal           >= 0.3.0.0,
                       bytestring       >= 0.10.0.0,
                       cryptohash       >= 0.9.0,
                       stm              >= 2.4.0,
                       uuid             >= 1.2.0,
                       time             >= 1.4.0.0,
                       Decimal          >= 0.3.0,
                       resource-pool    >= 0.2.3,
                       hslogger         >= 1.2

  ghc-options:         -Wall -fno-warn-name-shadowing -fno-warn-unused-matches
                       -fno-warn-missing-signatures -fno-warn-orphans
                       -fno-warn-unused-imports -fno-warn-unused-binds
