name:                cassandra-cql
version:             0.6
synopsis:            Haskell client for Cassandra's CQL protocol
description:         Haskell client for Cassandra's CQL protocol.
license:             BSD3
license-file:        LICENSE
author:              Stephen Blackheath
maintainer:          http://blacksapphire.com/antispam/
copyright:           (c) Stephen Blackheath 2013-2015
category:            Database
build-type:          Simple
stability:           alpha
cabal-version:       >=1.8
source-repository head
  type:     git
  location: https://github.com/the-real-blackh/cassandra-cql

library
  exposed-modules:     Database.Cassandra.CQL
  build-depends:       Decimal,
                       base,
                       bytestring,
                       cereal,
                       exceptions,
                       containers,
                       cryptohash,
                       hslogger,
                       mtl,
                       network,
                       random,
                       resource-pool,
                       stm,
                       text,
                       time,
                       uuid

  ghc-options:         -Wall -fno-warn-name-shadowing -fno-warn-unused-matches
                       -fno-warn-missing-signatures -fno-warn-orphans
                       -fno-warn-unused-imports -fno-warn-unused-binds

